testing github pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <h1>Bouncing Ball</h1>
     <div id="display">
         
     </div>
