testing github pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="display">
         
     </div>
+    <button id="start">Start</button>
     <script defer src="script.js"></script>
 </body>
 
