--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 document.getElementById(fieldName).innerHTML = value.toFixed(precision);
         }
 
+        let object = document.getElementById("object");
+        let velocityX = 0;
+        let velocityY = 0;
+        let lastTime = null;
+        const damping = 0.9; // Damping factor for simulating inertia
+
         function handleMotion(event) {
             const accelerationX = event.acceleration.x;
             const accelerationY = event.acceleration.y;
@@ -34,7 +40,6 @@
             updateFieldIfNotNull("Accelerometer_x", accelerationX);
             updateFieldIfNotNull("Accelerometer_y", accelerationY);
 
-            const object = document.getElementById("object");
             const screenWidth = window.innerWidth;
             const screenHeight = window.innerHeight;
 
@@ -43,9 +48,28 @@
             const newX = (accelerationX / 10) * (screenWidth / 2) + (screenWidth / 2);
             const newY = (-accelerationY / 10) * (screenHeight / 2) + (screenHeight / 2);
 
-            // Set object position
-            object.style.left = `${newX}px`;
-            object.style.top = `${newY}px`;
+            // Calculate time difference since last update
+            const currentTime = Date.now();
+            const deltaTime = lastTime ? (currentTime - lastTime) / 1000 : 0;
+
+            // Calculate new velocity based on accelerometer data
+            velocityX += accelerationX * deltaTime;
+            velocityY += accelerationY * deltaTime;
+
+            // Apply damping to simulate inertia
+            velocityX *= damping;
+            velocityY *= damping;
+
+            // Update object position
+            const newLeft = object.offsetLeft + velocityX;
+            const newTop = object.offsetTop + velocityY;
+
+            // Ensure the object stays within the bounds of the screen
+            object.style.left = `${Math.min(Math.max(newLeft, 0), screenWidth - object.offsetWidth)}px`;
+            object.style.top = `${Math.min(Math.max(newTop, 0), screenHeight - object.offsetHeight)}px`;
+
+            // Update lastTime for next iteration
+            lastTime = currentTime;
         }
 
         let demo_button = document.getElementById("start_demo");
