--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accelerometer Example</title>
+    <title>Gyroscope Example</title>
     <style>
         #object {
             position: absolute;
@@ -17,9 +17,6 @@
 
 <body>
     <div id="object"></div>
-    <div id="Accelerometer_x"></div>
-    <div id="Accelerometer_y"></div>
-    <button id="start_demo">Start Demo</button>
 
     <script>
         function updateFieldIfNotNull(fieldName, value, precision = 10) {
@@ -31,30 +28,23 @@
         let velocityX = 0;
         let velocityY = 0;
         let lastTime = null;
-        const damping = 0.2; // Damping factor for simulating inertia
+        const damping = 0.8; // Damping factor for simulating inertia
+        const sensitivity = 0.2; // Sensitivity factor to adjust movement
 
-        // Center the object in the middle of the screen
-        const screenWidth = window.innerWidth;
-        const screenHeight = window.innerHeight;
-        const initialLeft = (screenWidth - object.offsetWidth) / 2;
-        const initialTop = (screenHeight - object.offsetHeight) / 2;
-        object.style.left = `${initialLeft}px`;
-        object.style.top = `${initialTop}px`;
+        function handleOrientation(event) {
+            const alpha = event.alpha;
+            const beta = event.beta;
 
-        function handleMotion(event) {
-            const accelerationX = event.acceleration.x;
-            const accelerationY = event.acceleration.y;
-
-            updateFieldIfNotNull("Accelerometer_x", accelerationX);
-            updateFieldIfNotNull("Accelerometer_y", accelerationY);
+            updateFieldIfNotNull("Gyroscope_alpha", alpha);
+            updateFieldIfNotNull("Gyroscope_beta", beta);
 
             // Calculate time difference since last update
             const currentTime = Date.now();
             const deltaTime = lastTime ? (currentTime - lastTime) / 1000 : 0;
 
-            // Calculate new velocity based on accelerometer data
-            velocityX += accelerationX * deltaTime;
-            velocityY += accelerationY * deltaTime;
+            // Calculate new velocity based on gyroscope data
+            velocityX += beta * sensitivity * deltaTime;
+            velocityY += alpha * sensitivity * deltaTime;
 
             // Apply damping to simulate inertia
             velocityX *= damping;
@@ -64,11 +54,9 @@
             const newLeft = object.offsetLeft + velocityX;
             const newTop = object.offsetTop + velocityY;
 
-            // Update object position faster
-            newLeft *= 5;
-            newTop *= 5;
-
             // Ensure the object stays within the bounds of the screen
+            const screenWidth = window.innerWidth;
+            const screenHeight = window.innerHeight;
             object.style.left = `${Math.min(Math.max(newLeft, 0), screenWidth - object.offsetWidth)}px`;
             object.style.top = `${Math.min(Math.max(newTop, 0), screenHeight - object.offsetHeight)}px`;
 
@@ -76,24 +64,7 @@
             lastTime = currentTime;
         }
 
-        let demo_button = document.getElementById("start_demo");
-        demo_button.onclick = function (e) {
-            e.preventDefault();
-
-            // Request permission for iOS 13+ devices
-            if (
-                DeviceMotionEvent &&
-                typeof DeviceMotionEvent.requestPermission === "function"
-            ) {
-                DeviceMotionEvent.requestPermission().then(response => {
-                    if (response === 'granted') {
-                        window.addEventListener("devicemotion", handleMotion);
-                    }
-                }).catch(console.error);
-            } else {
-                window.addEventListener("devicemotion", handleMotion);
-            }
-        };
+        window.addEventListener('deviceorientation', handleOrientation);
     </script>
 </body>
 
