--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gyroscope Example</title>
+    <title>Accelerometer Example</title>
     <style>
         #object {
             position: absolute;
@@ -17,12 +17,12 @@
 
 <body>
     <div id="object"></div>
-    <div>
-        Sensitivity X: <input type="number" id="sensitivityX" value="0.2" step="0.1" min="0" max="1">
-    </div>
-    <div>
-        Sensitivity Y: <input type="number" id="sensitivityY" value="0.2" step="0.1" min="0" max="1">
-    </div>
+    <div id="Accelerometer_x"></div>
+    <div id="Accelerometer_y"></div>
+    <button id="start_demo">Start Demo</button>
+
+    <label for="damping_input">Damping Factor:</label>
+    <input type="number" id="damping_input" value="0.8" step="0.01" min="0" max="1">
 
     <script>
         function updateFieldIfNotNull(fieldName, value, precision = 10) {
@@ -34,9 +34,7 @@
         let velocityX = 0;
         let velocityY = 0;
         let lastTime = null;
-        let sensitivityX = 0.2; // Initial sensitivity for X-axis
-        let sensitivityY = 0.2; // Initial sensitivity for Y-axis
-        const damping = 0.8; // Damping factor for simulating inertia
+        let damping = 0.8; // Initial damping factor
 
         // Center the object in the middle of the screen
         const screenWidth = window.innerWidth;
@@ -46,24 +44,20 @@
         object.style.left = `${initialLeft}px`;
         object.style.top = `${initialTop}px`;
 
-        function handleOrientation(event) {
-            const alpha = event.alpha;
-            const beta = event.beta;
+        function handleMotion(event) {
+            const accelerationX = event.acceleration.x;
+            const accelerationY = event.acceleration.y;
 
-            updateFieldIfNotNull("Gyroscope_alpha", alpha);
-            updateFieldIfNotNull("Gyroscope_beta", beta);
-
-            // Update sensitivity values from input fields
-            sensitivityX = parseFloat(document.getElementById("sensitivityX").value);
-            sensitivityY = parseFloat(document.getElementById("sensitivityY").value);
+            updateFieldIfNotNull("Accelerometer_x", accelerationX);
+            updateFieldIfNotNull("Accelerometer_y", accelerationY);
 
             // Calculate time difference since last update
             const currentTime = Date.now();
             const deltaTime = lastTime ? (currentTime - lastTime) / 1000 : 0;
 
-            // Calculate new velocity based on gyroscope data and sensitivity
-            velocityX += beta * sensitivityX * deltaTime;
-            velocityY += alpha * sensitivityY * deltaTime;
+            // Calculate new velocity based on accelerometer data
+            velocityX += accelerationX * deltaTime;
+            velocityY += accelerationY * deltaTime;
 
             // Apply damping to simulate inertia
             velocityX *= damping;
@@ -81,7 +75,29 @@
             lastTime = currentTime;
         }
 
-        window.addEventListener('deviceorientation', handleOrientation);
+        let demo_button = document.getElementById("start_demo");
+        demo_button.onclick = function (e) {
+            e.preventDefault();
+
+            // Request permission for iOS 13+ devices
+            if (
+                DeviceMotionEvent &&
+                typeof DeviceMotionEvent.requestPermission === "function"
+            ) {
+                DeviceMotionEvent.requestPermission().then(response => {
+                    if (response === 'granted') {
+                        window.addEventListener("devicemotion", handleMotion);
+                    }
+                }).catch(console.error);
+            } else {
+                window.addEventListener("devicemotion", handleMotion);
+            }
+        };
+
+        // Update damping factor when input changes
+        document.getElementById("damping_input").addEventListener("change", function () {
+            damping = parseFloat(this.value);
+        });
     </script>
 </body>
 
