--- a/index.html
+++ b/index.html
@@ -19,14 +19,20 @@
     <div id="object"></div>
     <div id="Object_x"></div>
     <div id="Object_y"></div>
+    <div>
+        <label for="sensitivitySlider">Sensitivity: </label>
+        <input type="range" id="sensitivitySlider" min="0.1" max="2" step="0.1" value="0.5">
+    </div>
     <button id="start_demo">Start Demo</button>
 
     <script>
-        let object = document.getElementById("object");
+        const object = document.getElementById("object");
+        const sensitivitySlider = document.getElementById("sensitivitySlider");
+
         let velocityX = 0;
         let velocityY = 0;
         let lastTime = null;
-        const movementFactor = 0.5; // Sensitivity factor for object movement
+        const movementFactor = parseFloat(sensitivitySlider.value);
 
         // Center the object in the middle of the screen
         const screenWidth = window.innerWidth;
@@ -68,7 +74,7 @@
             lastTime = currentTime;
         }
 
-        let demo_button = document.getElementById("start_demo");
+        const demo_button = document.getElementById("start_demo");
         demo_button.onclick = function (e) {
             e.preventDefault();
 
