--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 <body>
     <div id="object"></div>
     <div id="Object_x"></div>
-    <div id="Object_y"></div>
+    <div>
+        <label for="sensitivitySlider">Sensitivity: </label>
+        <input type="range" id="sensitivitySlider" min="0.1" max="2" step="0.1" value="0.5">
+    </div>
     <button id="start_demo">Start Demo</button>
 
     <script>
         const object = document.getElementById("object");
+        const sensitivitySlider = document.getElementById("sensitivitySlider");
         let screenWidth = window.innerWidth;
         let screenHeight = window.innerHeight;
 
@@ -33,7 +37,6 @@
             object.style.left = `${initialLeft}px`;
             object.style.top = `${initialTop}px`;
             updateField("Object_x", Math.round(initialLeft));
-            updateField("Object_y", Math.round(initialTop));
         }
 
         centerObject(); // Center the object initially
@@ -42,7 +45,7 @@
             document.getElementById(fieldName).innerHTML = value;
         }
 
-        const sensitivity = 0.1; // Lower value for less sensitivity
+        const sensitivity = parseFloat(sensitivitySlider.value);
         let lastX = 0; // Last processed position
 
         function handleMotion(event) {
