--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accelerometer Example</title>
+    <meta viewport="width=device-width, initial-scale=1.0">
+    <title>Accelerometer Toggle Example</title>
     <style>
         #object {
             position: absolute;
@@ -17,77 +17,83 @@
 
 <body>
     <div id="object"></div>
-    <div id="Object_x"></div>
-    <div>
-        <label for="sensitivitySlider">Sensitivity: </label>
-        <input type="range" id="sensitivitySlider" min="0.1" max="2" step="0.1" value="0.5">
-    </div>
-    <button id="start_demo">Start Demo</button>
+    <button id="toggle_demo">Start Demo</button>
 
     <script>
         const object = document.getElementById("object");
-        const sensitivitySlider = document.getElementById("sensitivitySlider");
         let screenWidth = window.innerWidth;
         let screenHeight = window.innerHeight;
+        let demoIsActive = false; // Track whether the demo is active
 
-        // Center the object in the middle of the screen
+        // Function to center the object on both X and Y axis
         function centerObject() {
             const initialLeft = (screenWidth - object.offsetWidth) / 2;
             const initialTop = (screenHeight - object.offsetHeight) / 2;
             object.style.left = `${initialLeft}px`;
             object.style.top = `${initialTop}px`;
-            updateField("Object_x", Math.round(initialLeft));
         }
 
-        centerObject(); // Center the object initially
+        // Initial centering of the object
+        centerObject();
 
-        function updateField(fieldName, value) {
-            document.getElementById(fieldName).innerHTML = value;
+        const moveSpeed = 2; // Speed of object movement
+
+        function handleOrientation(event) {
+            if (!demoIsActive) return; // Exit if demo is not active
+
+            const gamma = event.gamma; // Left-to-right tilt in degrees
+            // Determine movement direction based on gamma value
+            let direction = gamma > 5 ? 1 : gamma < -5 ? -1 : 0;
+
+            // Update object's position at a constant speed
+            const currentLeft = parseInt(object.style.left, 10);
+            let newLeft = currentLeft + (moveSpeed * direction);
+
+            // Ensure the object remains within screen bounds
+            newLeft = Math.max(0, Math.min(screenWidth - object.offsetWidth, newLeft));
+
+            object.style.left = `${newLeft}px`;
         }
 
-        const sensitivity = parseFloat(sensitivitySlider.value);
-        let lastX = 0; // Last processed position
-
-        function handleMotion(event) {
-            const accelerationX = event.accelerationIncludingGravity.x || 0;
-
-            // Only update if significant move to reduce sensitivity
-            if (Math.abs(accelerationX - lastX) > sensitivity) {
-                lastX = accelerationX;
-
-                const currentLeft = object.offsetLeft;
-                let newLeft = currentLeft + accelerationX;
-
-                // Smooth movement with requestAnimationFrame
-                requestAnimationFrame(() => {
-                    object.style.left = `${Math.max(0, Math.min(screenWidth - object.offsetWidth, newLeft))}px`;
-                    updateField("Object_x", Math.round(object.offsetLeft));
-                });
-            }
-        }
-
-        const demo_button = document.getElementById("start_demo");
-        demo_button.onclick = function (e) {
+        const toggleButton = document.getElementById("toggle_demo");
+        toggleButton.addEventListener("click", function (e) {
             e.preventDefault();
+            demoIsActive = !demoIsActive; // Toggle the state of the demo
 
-            // Request permission for iOS 13+ devices
-            if (DeviceMotionEvent && typeof DeviceMotionEvent.requestPermission === "function") {
-                DeviceMotionEvent.requestPermission().then(response => {
-                    if (response === 'granted') {
-                        window.addEventListener("devicemotion", handleMotion);
+            if (demoIsActive) {
+                // Change button text to "Stop Demo"
+                toggleButton.textContent = "Stop Demo";
+                // Start listening to device orientation
+                startListening();
+            } else {
+                // Change button text to "Start Demo"
+                toggleButton.textContent = "Start Demo";
+                // Stop listening to device orientation
+                stopListening();
+            }
+        });
+
+        function startListening() {
+            if (typeof DeviceOrientationEvent !== 'undefined' && typeof DeviceOrientationEvent.requestPermission === 'function') {
+                DeviceOrientationEvent.requestPermission().then(response => {
+                    if (response == 'granted') {
+                        window.addEventListener('deviceorientation', handleOrientation);
                     }
                 }).catch(console.error);
             } else {
-                window.addEventListener("devicemotion", handleMotion);
+                window.addEventListener('deviceorientation', handleOrientation);
             }
-        };
+        }
 
-        // Handle screen resize to keep object centered
-        window.onresize = function () {
+        function stopListening() {
+            window.removeEventListener('deviceorientation', handleOrientation);
+        }
+
+        window.addEventListener('resize', () => {
             screenWidth = window.innerWidth;
             screenHeight = window.innerHeight;
-            centerObject(); // Re-center the object when the window size changes
-        };
+            centerObject(); // Re-center the object on resize
+        });
     </script>
 </body>
 
