--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
 <body>
     <div id="object"></div>
+    <div>
+        <label for="speedSlider">Speed: </label>
+        <input type="range" id="speedSlider" min="1" max="20" step="0.5" value="2">
+    </div>
     <button id="toggle_demo">Start Demo</button>
 
     <script>
         const object = document.getElementById("object");
+        const speedSlider = document.getElementById("speedSlider");
         let screenWidth = window.innerWidth;
         let screenHeight = window.innerHeight;
         let demoIsActive = false; // Track whether the demo is active
@@ -36,7 +41,7 @@
         // Initial centering of the object
         centerObject();
 
-        const moveSpeed = 2; // Speed of object movement
+        const moveSpeed = parseFloat(sensitivitySlider.value); // Speed of object movement
 
         function handleOrientation(event) {
             if (!demoIsActive) return; // Exit if demo is not active
