Fix meta viewport attribute in acc.html

--- a/acc.html
+++ b/acc.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta viewport="width=device-width, initial-scale=1.0">
     <title>Accelerometer Example</title>
     <style>
         #object {
@@ -45,7 +45,7 @@
             document.getElementById(fieldName).innerHTML = value;
         }
 
-        const sensitivity = parseFloat(sensitivitySlider.value);
+        const sensitivity = sensitivitySlider.value;
         let lastX = 0; // Last processed position
 
         function handleMotion(event) {
