--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="object"></div>
     <div>
         <label for="speedSlider">Speed: </label>
-        <input type="range" id="speedSlider" min="1" max="20" step="0.5" value="2">
+        <input type="range" id="speedSlider" min="1" max="20" step="1" value="5">
     </div>
     <button id="toggle_demo">Start Demo</button>
 
@@ -41,7 +41,7 @@
         // Initial centering of the object
         centerObject();
 
-        const moveSpeed = parseFloat(sensitivitySlider.value); // Speed of object movement
+        const moveSpeed = sensitivitySlider.value; // Speed of object movement
 
         function handleOrientation(event) {
             if (!demoIsActive) return; // Exit if demo is not active
