--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta viewport="width=device-width, initial-scale=1.0">
-    <title>Accelerometer Toggle Example</title>
+    <title>Accelerometer Example</title>
     <style>
         #object {
             position: absolute;
@@ -17,15 +17,11 @@
 
 <body>
     <div id="object"></div>
-    <div>
-        <label for="speedSlider">Speed: </label>
-        <input type="range" id="speedSlider" min="1" max="20" step="1" value="5">
-    </div>
-    <button id="toggle_demo">Start Demo</button>
+    <div id="Object_x"></div>
+    <button id="start_demo">Start Demo</button>
 
     <script>
         const object = document.getElementById("object");
-        const speedSlider = document.getElementById("speedSlider");
         let screenWidth = window.innerWidth;
         let screenHeight = window.innerHeight;
         let demoIsActive = false; // Track whether the demo is active
@@ -41,7 +37,7 @@
         // Initial centering of the object
         centerObject();
 
-        const moveSpeed = sensitivitySlider.value; // Speed of object movement
+        const moveSpeed = 5; // Speed of object movement
 
         function handleOrientation(event) {
             if (!demoIsActive) return; // Exit if demo is not active
@@ -60,7 +56,7 @@
             object.style.left = `${newLeft}px`;
         }
 
-        const toggleButton = document.getElementById("toggle_demo");
+        const toggleButton = document.getElementById("start_demo");
         toggleButton.addEventListener("click", function (e) {
             e.preventDefault();
             demoIsActive = !demoIsActive; // Toggle the state of the demo
